--- a/ACS-1 - Compilers/PA2/Makefile
+++ b/ACS-1 - Compilers/PA2/Makefile
@@ -1,7 +1,9 @@
-.PHONY: build run
+.PHONY: build lex compile
 
-run:
-	docker run --rm -it -v "$$PWD":/src compilers-pa2 /bin/bash /src/support/run.sh
+lex:
+	docker run --rm -it -v "$$PWD":/src compilers-pa2 /bin/bash /src/support/run-lexer.sh
+compile:
+	docker run --rm -it -v "$$PWD":/src compilers-pa2 /bin/bash /src/support/run-compiler.sh
 build:
 	docker rm compilers-PA2
 	docker run --name compilers-PA2 -it -v "$$PWD":/src cmc333333/compilers-docker /bin/bash /src/support/build.sh
