--- a/ACS-1 - Compilers/PA2/Makefile
+++ b/ACS-1 - Compilers/PA2/Makefile
@@ -4,6 +4,8 @@ lex:
 	docker run --rm -it -v "$$PWD":/src compilers-pa2 /bin/bash /src/support/run-lexer.sh
 compile:
 	docker run --rm -it -v "$$PWD":/src compilers-pa2 /bin/bash /src/support/run-compiler.sh
+grade:
+	docker run --rm -it -v "$$PWD":/src compilers-pa2 /bin/bash /src/support/grade.sh
 build:
 	docker rm compilers-PA2
 	docker run --name compilers-PA2 -it -v "$$PWD":/src cmc333333/compilers-docker /bin/bash /src/support/build.sh
